<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ts_ros_test_msgs</name>
  <version>0.0.1</version>
  <description>test msgs for ts_ros</description>
  <maintainer email="koonpeng@openrobotics.org">Teo Koon Peng</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
